[package]
name = "timeline_check"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "postgres"] }
tokio = { version = "1.34.0", features = ["full"] }
